# cluster_affinity

./: .gitignore  1.tre  2.tre  LICENSE  README.md  code_review.md  flake.nix  my_output.txt  o1.tre  o2.tre  out.tre  output.tre  pyproject.toml  requirements.txt  sample1.tre  sample2.tre  test.py  typescript
.github/workflows/: python-app.yml  python-package.yml  python-publish.yml  python-test.yml
cluster_affinity/cluster_computation/: __init__.py  cluster_affinity.py
examples/: multiple_trees_example.tre  t1.tre  t2.tre
src/: #main.py#  Untitled.ipynb  __init__.py  affinity.py  extendedtree.py  main.py  readTree.py  reportable.py  rooted_affinity.py  rtu_affinity.py  spr_test.py  utils.py  utr_affinity.py
src/ca_calculator/: __init__.py  rooted_affinity.py  rtu_affinity.py  utr_affinity.py
src/cluster_affinity/: __init__.py  cli.py  config.py  main.py  main.py~  matrix.py  reader.py  utils.py  visualization.py
src/cluster_affinity/ca_calculator/: __init__.py
src/cluster_affinity/cluster_computation/: __init__.py  cluster_affinity.py  heavy_path_decompositions.py  heavy_trees.py  transfer_index.py
src/cluster_affinity/test/: test_cli.py  test_clustertree.py  test_heavy_trees.py  test_reader.py
src/cluster_computation/: __init__.py  cluster_affinity.py  extendedtree.py  heavy_path.py  heavy_path_decompositions.py  tau.py  transfer_index.py  try.py
src/extendedtree/: __init__.py  counter.py  extendedtree.py
src/test/: test_cluster_affinity.py  test_clustertree.py  test_heavy_trees.py
test/: 1_result.tre  2_result.tre  bdtree_0.tre  bdtree_100.tre
