[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["ete4","matplotlib","alive-progress"]
name="cluster_affinity"
version="0.1.1"
authors = [
	{name="Sanket Wagle", email="swagle@iastate.edu"}
]
description="A tool to calculate the cluster affinity distance between two trees"
readme="README.md"

[project.scripts]
cluster_affinity = "main:cluster_affinity_script"
cluster_matrix = "main:cluster_matrix_script"
cluster_support = "main:cluster_support_script"

[project.urls]
Homepage = "https://github.com/swagle8987/cluster_affinity"
Issues = "https://github.com/swagle8987/cluster_affinity/issues"

[tool.pytest.ini_options]
markers = [
    "fuzzy",
    "prop",
]
