[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["ete4","matplotlib","alive-progress"]
name="cluster_affinity"
version="0.5.1"
authors = [
	{name="Sanket Wagle", email="swagle@iastate.edu"}
]
description="A tool to calculate the cluster affinity distance between two trees"
readme="README.md"

[project.scripts]
cluster_affinity = "cluster_affinity.cli:cluster_affinity"
cluster_matrix = "cluster_affinity.matrix:cluster_matrix"
cluster_support = "cluster_affinity.cli:cluster_support"

[project.urls]
Homepage = "https://github.com/swagle8987/cluster_affinity"
Issues = "https://github.com/swagle8987/cluster_affinity/issues"

[tool.pytest.ini_options]
markers = [
    "slow",
    "prop",
    "optional",
    "perf",
    "cli"
]
